# RandomCodeScraps

./: .gitignore  Linux_commands.txt  README.md  notes.txt
Algos/: BinarySearch.java  BinarySearch2DArray.java  ContainsDuplicate.java  DivideWithoutOperators.java  GroupAnagrams.java  GroupAnagramsAgain.java  LongestConsecutiveSequence.java  MissingPositiveInteger.java  Power.java  ProductExceptSelf.java  SearchRotatedArray.java  StringToInt.java  TopKFrequent.java  TwoSum.java  ValidAnagram.java  ValidSudoku.java  ZigzagConvertion.java
C/base/: hello.c  notes.md
C/calc/: advanced_calculator.c  calculator.c  more_advanced_calculator.c  your_name.c  your_name_lvl_2.c
C/playground/: self_hashing_algo.c  signed_and_unsigned_int.c  some_array_exp.c  some_byte_exp.c
Java/JavaTpoint/: BaseObjectClass.java  CallByValue.java  CommandLineExample.java  Operation.java  Students.java
Java/Mastery/: CollectionExample.java  Intro.java  IterationTechniques.java  SampeStreams.java
Java/Security/: Main.java
Java/WithLibs/: ApplicationIdentifiers.java  Sample.java
Java/jakkan/: settings.gradle
Js/d_types/: main.ts  (+2 more)
Python/: Intro.py
Python/servers/flask-server/: app.py  cert.pem  coloured_json.py  key.pem  pyproject.toml
Python/servers/flask-server/core/: ppi_response_codes.py  ppid_generator.py
Rust/: syllabus.md
Rust/algos/test_code/: Cargo.toml  rustfmt.toml  track_record.md
Rust/algos/test_code/src/: main.rs
Rust/test_ground/tokyooo/: Cargo.toml
Rust/test_ground/tokyooo/src/: buffer.rs  main.rs
asm/: asm_notes.md  hello.asm
rp-poetry/: pyproject.toml
(+440 files in other folders)
