[package]
name = "tokyooo"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13.4", default-features = false, features = ["http2", "stream", "json", "rustls", "system-proxy", "socks"]}
futures = "0.3.32"
tokio-util = { version = "0.7.18", features = ["full"]}
